--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 body {
   margin: 0;
-  padding: 0.5em;
+  /* padding: 0.5em; */
 
   background-color: seashell;
 }
 
 canvas {
   background-color: white;
+  border: 1px solid black;
 }
 
 button {
